--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: The Land of Void
 SEOTitle: Void Land
 header-img: img/home-bg.jpg
 email: fyufeii@gmail.com
-description: "\"乏善可陈。\""
+description: "乏善可陈。"
 keyword: "无甚可堪一提之处，先空着。"
 url: "https://fyufei.github.io" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
@@ -75,7 +75,7 @@ netease_comment: false
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
-sidebar-about-description: "我与我周旋久，宁作我。 <br> React Team @ Meta"
+sidebar-about-description: "我与我周旋久，宁作我。 <br> Telegram Channel https://t.me/AngryNeko"
 sidebar-avatar: https://github.com/Huxpro.png # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
