--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: The Land of Void
 SEOTitle: Void Land
-header-img: img/home-bg.jpg
+header-img: img/home-bg.png
 email: fyufeii@gmail.com
 description: "乏善可陈。"
 keyword: "无甚可堪一提之处，先空着。"
