--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ netease_comment: false
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
-sidebar-about-description: "我与我周旋久，宁作我。 <br> Telegram <a href="https://t.me/AngryNeko">生气小猫的废话频道</a> "
+sidebar-about-description: "我与我周旋久，宁作我。 <br> Telegram @Floatingrainn "
 sidebar-avatar: https://github.com/Fyufei.png # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
