--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: Void Land
 header-img: img/home-bg.png
 email: fyufeii@gmail.com
 description: "乏善可陈。"
-keyword: "无甚可堪一提之处，先空着。"
+keyword: "文拉法辛, Yufeii, FloatingRainn"
 url: "https://fyufei.github.io" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
@@ -15,7 +15,7 @@ future: true
 RSS: false
 # weibo_username: huxpro
 # zhihu_username: huxpro
-# github_username: huxpro
+github_username: FYufei
 twitter_username: Venlafaxinel
 telegram_username: Floatingrainn
 #facebook_username:  huxpro
