--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Feii Blog",
   "short_name": "Feii Blog",
-  "description": "About a human-learner and life-gamer.",
+  "description": "About a human-learner and a life-gamer.",
   "icons": [{
     "src": "icons/128.png",
     "sizes": "128x128",
